Formada la pagina principal (aunque aun con algunos errores)
Añadidas secciones y colecciones.

--- a/website/_sass/main.scss
+++ b/website/_sass/main.scss
@@ -1,7 +1,16 @@
-h1 {
-    text-align: center;
-}
-
 body {
     margin: 0;
+    background-color: $ligthbg;
+
+    font-family: monospace;
+    color: $textcolor;
+}
+
+body a {
+    color: $textcolor;
+    text-decoration: none;
+}
+
+body a:hover {
+    text-decoration: underline;
 }
